# ogg-summarizer

./: .gitignore  README.md  main.py  pyproject.toml
summarizer/: assemblyai.py  config.py  main.py  openai.py
